--- a/_config.yml
+++ b/_config.yml
@@ -7,18 +7,18 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Mr"
+title                    : "Bhavish's Profile"
 title_separator          : "-"
 name                     : &name "Bhavish Pahwa"
 description              : &description "Final Year Undergrad@BITS-Hyderabad"
-url                      : bp-high.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://bp-high.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "bp-high/bp-high.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
-read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
+read_more                : "enabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : &twitter "BpHigh_BpLow"
 facebook:
   username               :
   app_id                 :
@@ -73,7 +73,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "false" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          :
 
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Bhavish Pahwa"
-  avatar           : "profile.png"
+  avatar           : "my_image.jpeg"
   bio              : "Dynamic and focused, final year undergrad with experience of more than a year in the professional tech industry. Early Career researcher working in Computational Social Science, with a particular focus on hate speech and abusive language detection on social media platforms, eager to contribute to developing an inclusive, safe social space for all communities. Beginner in open source contributions, deeply motivated by the ideology to democratize AI research."
   location         : "India"
   employer         :
   pubmed           : ""
   googlescholar    : "https://scholar.google.com/citations?user=rF9f7psAAAAJ&hl=en"
-  email            :
+  email            : "bhavishpahwa@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "bp-high"
   google_plus      :
   keybase          :
   instagram        :
