--- a/_data/workex.yml
+++ b/_data/workex.yml
@@ -1,7 +1,15 @@
 experiences:
   - name: "Amazon"
-    img-path: ""
+    img-path: "amazon.png"
     designation: "Software Development Intern"
     url: "https://academy.amazon.in/"
     date: "Feb 2022 - June 2022, Remote/India"
     desc: "Working in the Amazon Academy Organisation. My team works towards Monetization and Upper Funnel"
+
+  - name: "DBS Bank"
+    img-path: "dbs.png"
+    designation: "Technical Analyst Intern/Data Science Intern"
+    url: "https://www.dbs.com/in/index/default.page"
+    date: "May 2021 - Aug 2021, Remote/India"
+    desc: "Worked closely with the Data science and NLP team at the Credit & Operational Risk Department at DAH2 centre of DBS Bank , Singapore."
+  
