--- a/_data/workex.yml
+++ b/_data/workex.yml
@@ -4,7 +4,8 @@ experiences:
     designation: "Software Development Engineer - 1"
     url: "https://www.mindtickle.com/"
     date: "July 2022 - , Remote/Pune, India"
-    desc: "Working in the Call AI team in MindTickle"
+    desc: "• Part of the pan organisation R&D and Central ML team known as COEML(Centre of Excellence for ML)
+           • Solving problems related to analytics and insights from sales meetings using audio and textual-based solutions."
 
   - name: "Amazon"
     img-path: "amazon.png"
