--- a/_data/workex.yml
+++ b/_data/workex.yml
@@ -1,10 +1,10 @@
 experiences:
   - name: "MindTickle!"
     img-path: "mindtickle.png"
-    designation: "Software Development Engineer - 1"
+    designation: "Software Development Engineer - 1 ML"
     url: "https://www.mindtickle.com/"
     date: "July 2022 - , Remote/Pune, India"
-    desc: "• Part of the pan organisation R&D and Central ML team known as COEML(Centre of Excellence for ML)
+    desc: "• Part of the pan organisation R&D and Central ML team known as COEML(Centre of Excellence for ML) \n
            • Solving problems related to analytics and insights from sales meetings using audio and textual-based solutions."
 
   - name: "Amazon"
